--- a/src/app/components/todo-table/todo-table.component.html
+++ b/src/app/components/todo-table/todo-table.component.html
@@ -9,9 +9,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="todo-row" app-todo-table-row><tr>
-      <tr class="todo-row" app-todo-table-row><tr>
-      <tr class="todo-row" app-todo-table-row><tr>
+      <tr class="todo-row" *ngFor="let todo of (todos$ | async); trackBy: trackById" app-todo-table-row [todo]="todo"></tr>
     </tbody>
   </table>
 </div>
