--- a/src/app/components/todo-table/todo-table.component.scss
+++ b/src/app/components/todo-table/todo-table.component.scss
@@ -46,14 +46,16 @@ tr.todo-row {
     transform: translateY(-4px);
   }
 
-  .entering {
+  &.entering {
     animation: rowEnter .32s cubic-bezier(.2, .9, .3, 1) both;
   }
 
-  .leaving {
-    animation: rowLeave .28s ease both;
-  }
 }
+
+  @keyframes rowEnter {
+  from{ opacity:0; transform: translateY(-12px) scale(0.995); }
+  to{ opacity:1; transform: none; }
+  }
 
 .empty {
   text-align: center;
