feat(todos): implement delete functionality, improve UI interactions & add e2e tests
Refs: #3

--- a/src/app/components/todo-table/todo-table.component.html
+++ b/src/app/components/todo-table/todo-table.component.html
@@ -9,7 +9,14 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="todo-row" *ngFor="let todo of (todos$ | async); trackBy: trackById" app-todo-table-row [todo]="todo"></tr>
+      <tr 
+        class="todo-row"
+        *ngFor="let todo of (todos$ | async); trackBy: trackById"
+        app-todo-table-row [todo]="todo"
+        (delete)="onDeleteTodo($event)"
+        [isProcessing]="(isProcessing$ | async) ?? false"
+        >
+      </tr>
     </tbody>
   </table>
 </div>
