--- a/src/app/components/todo-table-row/todo-table-row.component.html
+++ b/src/app/components/todo-table-row/todo-table-row.component.html
@@ -14,5 +14,10 @@
 <td class="muted">{{ todo.createdAt | date:'dd/MM/yyyy HH:mm:ss' }}</td>
 <td class="actions">
   <button [title]="'todoTable.row.btn.edit.title' | translate" class="icon-btn">✎</button>
-  <button [title]="'todoTable.row.btn.remove.title' | translate" class="icon-btn">🗑</button>
+  <button
+    (click)="onDeleteTodo()"
+    [title]="'todoTable.row.btn.remove.title' | translate"
+    class="icon-btn"
+    [class.is-processing]="isProcessing"
+    [disabled]="isProcessing">🗑</button>
 </td>
