fix(todo): correct aria attribute from ariaPressed to ariaChecked for accessibility
Refs: #5

--- a/src/app/components/todo-table-row/todo-table-row.component.html
+++ b/src/app/components/todo-table-row/todo-table-row.component.html
@@ -13,7 +13,7 @@
       [checked]="!!todo.complete"
       (click)="onToggleComplete($event)"
       type="checkbox"
-      [ariaPressed]="!!todo.complete">
+      [attr.ariaChecked]="!!todo.complete">
     </label>
     <div
       class="todo-text"
