refactor(todo): remove unused template reference for todo text element
Refs: #5

--- a/src/app/components/todo-table-row/todo-table-row.component.html
+++ b/src/app/components/todo-table-row/todo-table-row.component.html
@@ -17,8 +17,7 @@
     </label>
     <div
       class="todo-text"
-      [class.strike]="todo.complete"
-      #todoTextEl>
+      [class.strike]="todo.complete">
       {{ todo.title }}
     </div>
   </div>
