--- a/src/app/components/todo-table-row/todo-table-row.component.html
+++ b/src/app/components/todo-table-row/todo-table-row.component.html
@@ -2,11 +2,22 @@
 <td>
   <div class="title">
     <label
-      class="custom-checkbox" [title]="(todo.complete ? 'todoTable.row.checkboxLabel.unCompleted' : 'todoTable.row.checkboxLabel.completed') | translate">
-      <input name="toggleCompletion" type="checkbox" [ariaPressed]="todo.complete">
-      <span class="check-mark"></span>
+      data-testid="todo-row-checkbox-label">
+      <input
+      data-testid="todo-row-checkbox"
+      [disabled]="isProcessing"
+      name="toggleCompletion"
+      [checked]="!!todo.complete"
+      (click)="onToggleComplete($event)"
+      type="checkbox"
+      [attr.aria-checked]="!!todo.complete"
+      [attr.aria-label]="(todo.complete 
+        ? 'todoTable.row.checkboxLabel.completed.title'
+        : 'todoTable.row.checkboxLabel.unCompleted.title') | translate">
     </label>
-    <div class="todo-text">
+    <div
+      class="todo-text"
+      [class.strike]="todo.complete">
       {{ todo.title }}
     </div>
   </div>
