--- a/src/app/components/todo-table/todo-table.component.scss
+++ b/src/app/components/todo-table/todo-table.component.scss
@@ -41,6 +41,7 @@ tr.todo-row {
   transform-origin: center;
   transition: transform .28s cubic-bezier(.2, .9, .3, 1), opacity .25s ease, background .2s ease;
   box-shadow: 0 6px 18px rgba(15, 23, 42, .03);
+  min-height: 66px;
 
   &:hover {
     transform: translateY(-4px);
