fix(todo): correct keyup event from 'esc' to 'escape' for editing todos
Refs: #7

--- a/src/app/components/todo-table-row/todo-table-row.component.html
+++ b/src/app/components/todo-table-row/todo-table-row.component.html
@@ -35,7 +35,7 @@
         [(ngModel)]="todo.title"
         autocomplete="off"
         (keyup.enter)="save($event)"
-        (keyup.esc)="save($event)"
+        (keyup.escape)="save($event)"
         name="editTodoTitle"
         [attr.aria-label]="'todoTable.row.title.editInput.ariaLabel' | translate">
     </ng-template>
