refactor(todo): enable editing input regardless of editing state
Refs: #7

--- a/src/app/components/todo-table-row/todo-table-row.component.html
+++ b/src/app/components/todo-table-row/todo-table-row.component.html
@@ -30,7 +30,7 @@
       <input
         data-testid="edit-todo-title-input"
         #titleInputRef
-        [disabled]="isProcessing && !editing"
+        [disabled]="isProcessing"
         type="text"
         [(ngModel)]="todo.title"
         autocomplete="off"
