feat(todo): add "delete all todos" functionality
Refs: #11

--- a/src/app/components/add-form/add-form.component.html
+++ b/src/app/components/add-form/add-form.component.html
@@ -1,4 +1,9 @@
 <form #todoForm="ngForm" class="add-todo-form" (submit)="onAddTodo($event)">
   <input #todoInput="ngModel" [(ngModel)]="todoName" type="text" name="todoInput" [placeholder]="'addTodoForm.placeholder' | translate" autocomplete="off" required minlength="1">
-  <button class="btn" [disabled]="todoForm.invalid || isProcessing" type="submit">{{ 'addTodoForm.add' | translate }}</button>
+  <button
+    class="btn"
+    [disabled]="todoForm.invalid || isProcessing"
+    type="submit">
+    {{ 'addTodoForm.add.title' | translate }}
+  </button>
 </form>
