--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,10 @@ html, body {
   height: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   min-height: 100%;
@@ -26,13 +30,16 @@ body {
 }
 
 .container {
-  width: min(100%, 880px);
+  width: 880px;
   background: linear-gradient(180deg, rgba(255,255,255,0.85), rgba(255,255,255,0.9));
   border-radius: 16px;
   box-shadow: 0 12px 30px rgba(16, 24, 40, .08);
   padding: 1.25rem;
   backdrop-filter: blur(6px);
   border: 1px solid rgb(0, 0, 0, .03);
+  @media (max-width: 880px) {
+    width: 100%;
+  }
 }
 
 .btn {
