--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <app-header></app-header>
   <app-add-form></app-add-form>
   <app-todo-table></app-todo-table>
+  <app-footer></app-footer>
 </div>
