--- a/src/app/components/add-form/add-form.component.html
+++ b/src/app/components/add-form/add-form.component.html
@@ -1,9 +1,18 @@
 <form #todoForm="ngForm" class="add-todo-form" (submit)="onAddTodo($event)">
-  <input #todoInput="ngModel" [(ngModel)]="todoName" type="text" name="todoInput" [placeholder]="'addTodoForm.placeholder' | translate" autocomplete="off" required minlength="1">
+  <input
+  #todoInput="ngModel"
+  [(ngModel)]="todoName"
+  type="text"
+  name="todoInput"
+  [placeholder]="'addTodoForm.placeholder' | translate"
+  autocomplete="off"
+  required
+  minlength="1"
+  maxlength="40">
   <button
     class="btn"
     [disabled]="todoForm.invalid || isProcessing"
     type="submit">
-    {{ 'addTodoForm.add.title' | translate }}
+    {{ 'addTodoForm.button.title' | translate }}
   </button>
 </form>
