--- a/src/app/components/add-form/add-form.component.html
+++ b/src/app/components/add-form/add-form.component.html
@@ -1,17 +1,25 @@
-<form #todoForm="ngForm" class="add-todo-form" (submit)="onAddTodo($event)">
-  <input
-  #todoInput="ngModel"
-  [(ngModel)]="todoName"
-  type="text"
-  name="todoInput"
-  [placeholder]="'addTodoForm.placeholder' | translate"
-  autocomplete="off"
-  required
-  minlength="1"
-  maxlength="40">
+<form
+  #todoForm="ngForm"
+  class="add-todo-form"
+  (ngSubmit)="onAddTodo($event)">
+  <div class="input-wrapper">
+    <input
+      ngModel
+      type="text"
+      name="todoInput"
+      #todoInput="ngModel"
+      [(ngModel)]="todoName"
+      [placeholder]="'addTodoForm.placeholder' | translate" autocomplete="off" required minlength="1" maxlength="40">
+    <div
+      class="spinner"
+      [isLoading]="!!todoForm.pending">
+    </div>
+  </div>
   <button
     class="btn"
-    [disabled]="todoForm.invalid || isProcessing"
+    [disabled]="todoForm.invalid ||
+      todoForm.pending ||
+      isProcessing"
     type="submit">
     {{ 'addTodoForm.button.title' | translate }}
   </button>
