--- a/src/app/components/todo-table/todo-table.component.scss
+++ b/src/app/components/todo-table/todo-table.component.scss
@@ -66,6 +66,14 @@ from{ opacity:1; transform:none; }
 to{ opacity:0; transform: translateX(20px) scale(.98) }
 }
 
+.spinner-container {
+  width: 100%;
+  padding: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .empty {
   text-align: center;
   padding: 2rem;
