feat(todo): Add input validation pattern for todo name and title fields
Refs: #19

--- a/src/app/components/add-form/add-form.component.html
+++ b/src/app/components/add-form/add-form.component.html
@@ -8,6 +8,7 @@
       name="todoInput"
       #todoInput="ngModel"
       [(ngModel)]="todoName"
+      pattern="^[A-Za-z][\w\s.,!?\-]{0,39}$"
       [placeholder]="'addTodoForm.placeholder' | translate" autocomplete="off" required minlength="1" maxlength="40">
     <div
       class="spinner"
