--- a/src/app/components/todo-table-row/todo-table-row.component.html
+++ b/src/app/components/todo-table-row/todo-table-row.component.html
@@ -40,6 +40,7 @@
         #titleInputRef
         #titleInputModel="ngModel"
         type="text"
+      pattern="^[A-Za-z][\w\s.,!?\-]{0,39}$"
         [(ngModel)]="todo.title"
         autocomplete="off"
         (keyup.enter)="save($event)"
