feat: make app responsive on mobile devices
Refs: #30

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -6,6 +6,9 @@ footer {
   margin-top: 1rem;
   user-select: none;
   font-size: .9rem;
+  @media screen and (max-width: 300px) {
+    flex-direction: column;
+  }
 }
 
 footer .btn {
