--- a/src/app/components/todo-table/todo-table.component.html
+++ b/src/app/components/todo-table/todo-table.component.html
@@ -2,9 +2,9 @@
   <table aria-describedby="desc">
     <thead>
       <tr>
-        <th class="id">{{ 'todoTable.header.id' | translate }}</th>
+        <th class="id hide-mobile">{{ 'todoTable.header.id' | translate }}</th>
         <th>{{ 'todoTable.header.task' | translate }}</th>
-        <th class="created-at">{{ 'todoTable.header.createdAt' | translate }}</th>
+        <th class="created-at hide-mobile">{{ 'todoTable.header.createdAt' | translate }}</th>
         <th class="actions">{{ 'todoTable.header.actions' | translate }}</th>
       </tr>
     </thead>
