fix(todo): refresh form validity and completed todos
- Refresh add todo form validity when deleting or updating a todo
- Refresh hasCompletedTodos on component init

Refs: #29, #34

--- a/src/app/components/todo-table-row/todo-table-row.component.html
+++ b/src/app/components/todo-table-row/todo-table-row.component.html
@@ -40,7 +40,7 @@
         #titleInputRef
         #titleInputModel="ngModel"
         type="text"
-      pattern="^[A-Za-z][\w\s.,!?\-]{0,39}$"
+        pattern="^(?!.*\s[.,!?-])[A-Za-zÀ-ÖØ-öø-ÿ0-9\s.,!?-]{1,40}$"
         [(ngModel)]="todo.title"
         autocomplete="off"
         (keyup.enter)="save($event)"
